Stop shipping CUDA and OpenCL headers.  NVIDIA will stop including them in the 260.xx release.  The NVIDIA CUDA Toolkit (which is the only user of these header files) already contains them and is the recommended source for these header files. Drop libcuda1-dev and nvidia-libopencl1-dev packages, move libOpenCL.so link to nvidia-libopencl1.  libcuda1 and nvidia-libopencl1 Conflicts and Replaces their old -dev packages for clean upgrades without transitionals. (branches/256.xx-experimental: r1552, r1568, r1608, r1609)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1828 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-libopencl1.lintian-overrides.in
+++ b/debian/nvidia-libopencl1.lintian-overrides.in
@@ -1,3 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
 #!amd64#nvidia-libopencl1: shlib-with-non-pic-code
 #!amd64#nvidia-libopencl1: shlib-without-PT_GNU_STACK-section
+
+# A single symbolic link does not justify the creation of a new package.
+nvidia-libopencl1: non-dev-pkg-with-shlib-symlink
