--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: nvidia-graphics-drivers
-Section: non-free/x11
+Section: non-free/libs
 Priority: optional
 Maintainer: Debian NVIDIA Maintainers <pkg-nvidia-devel@lists.alioth.debian.org>
 Uploaders:
@@ -18,6 +18,7 @@ Standards-Version: 3.9.1
 Homepage: http://www.nvidia.com
 
 Package: nvidia-glx
+Section: non-free/x11
 Architecture: i386 amd64
 Pre-Depends: dpkg (>= 1.15.7.2), nvidia-common
 Depends:
@@ -56,6 +57,7 @@ Description: NVIDIA binary Xorg driver${nvidia:LegacyDesc}
  for a complete list of supported GPUs and PCI IDs.
 
 Package: nvidia-glx-ia32
+Section: non-free/oldlibs
 Priority: extra
 Architecture: amd64
 Pre-Depends: libc6-i386 (>= 2.9-18), nvidia-common
@@ -97,7 +99,6 @@ Description: NVIDIA OpenGL development files (transitional package)${nvidia:Lega
  applications.
 
 Package: libgl1-nvidia-glx
-Section: non-free/libs
 Architecture: i386 amd64
 Pre-Depends: nvidia-common
 Depends:
@@ -128,7 +129,6 @@ Description: NVIDIA binary OpenGL libraries${nvidia:LegacyDesc}
  for a complete list of supported GPUs and PCI IDs.
 
 Package: libgl1-nvidia-glx-ia32
-Section: non-free/libs
 Priority: extra
 Architecture: amd64
 Pre-Depends: libc6-i386 (>= 2.9-18), nvidia-common
@@ -267,7 +267,6 @@ Description: NVIDIA vdpau development files (transitional package)
  VDPAU development files.
 
 Package: nvidia-vdpau-driver
-Section: non-free/libs
 Architecture: i386 amd64
 Pre-Depends: nvidia-common
 Depends: libvdpau1,
@@ -298,7 +297,6 @@ Description: NVIDIA vdpau driver
  This will provide nvidia-kernel-${nvidia:Version}${nvidia:Perfkit}.
 
 Package: nvidia-vdpau-driver-ia32
-Section: non-free/libs
 Priority: extra
 Architecture: amd64
 Pre-Depends: libc6-i386 (>= 2.9-18), nvidia-common
@@ -331,6 +329,7 @@ Description: NVIDIA vdpau 32-bit driver
  This will provide nvidia-kernel-${nvidia:Version}${nvidia:Perfkit}.
 
 Package: nvidia-smi
+Section: non-free/utils
 Architecture: i386 amd64
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: nvidia-kernel-${nvidia:Version}${nvidia:Perfkit}
@@ -343,7 +342,6 @@ Description: NVIDIA System Management Interface
  Computing Systems.
 
 Package: libcuda1
-Section: non-free/libs
 Architecture: i386 amd64
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: nvidia-kernel-${nvidia:Version}${nvidia:Perfkit},
@@ -371,7 +369,6 @@ Description: NVIDIA CUDA runtime library
  This will provide nvidia-kernel-${nvidia:Version}${nvidia:Perfkit}.
 
 Package: libcuda1-ia32
-Section: non-free/libs
 Priority: extra
 Architecture: amd64
 Pre-Depends: libc6-i386 (>= 2.9-18)
@@ -398,7 +395,6 @@ Description: NVIDIA CUDA runtime library (32-bit)
  This will provide nvidia-kernel-${nvidia:Version}${nvidia:Perfkit}.
 
 Package: libnvidia-compiler
-Section: non-free/libs
 Architecture: i386 amd64
 Depends: libcuda1 (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
@@ -412,7 +408,6 @@ Description: NVIDIA runtime compiler library
  This package contains the runtime compiler library.
 
 Package: libnvidia-compiler-ia32
-Section: non-free/libs
 Priority: extra
 Architecture: amd64
 Pre-Depends: libc6-i386 (>= 2.9-18)
@@ -444,7 +439,6 @@ Description: NVIDIA runtime compiler library (32-bit) (transitional package)
  This is a dummy package to aid switching to libnvidia-compiler-ia32.
 
 Package: nvidia-opencl-common
-Section: non-free/libs
 Architecture: i386 amd64
 Depends: ${misc:Depends},
 Recommends: nvidia-opencl-icd | nvidia-opencl-icd-ia32 [amd64]
@@ -457,7 +451,6 @@ Description: NVIDIA OpenCL driver
  driver (ICD) for OpenCL.
 
 Package: nvidia-opencl-icd
-Section: non-free/libs
 Architecture: i386 amd64
 Depends: ${misc:Depends},
  nvidia-opencl-common,
@@ -474,7 +467,6 @@ Description: NVIDIA OpenCL ICD
  This package provides the NVIDIA installable client driver (ICD) for OpenCL.
 
 Package: nvidia-opencl-icd-ia32
-Section: non-free/libs
 Priority: extra
 Architecture: amd64
 Depends: ${misc:Depends},
@@ -493,7 +485,6 @@ Description: NVIDIA OpenCL ICD (32-bit)
  OpenCL.
 
 Package: nvidia-libopencl1
-Section: non-free/libs
 Architecture: i386 amd64
 Depends: ${shlibs:Depends}, ${misc:Depends},
 Conflicts: nvidia-libopencl1-dev
@@ -509,7 +500,6 @@ Description: NVIDIA OpenCL library
  library provided by NVIDIA.
 
 Package: nvidia-libopencl1-ia32
-Section: non-free/libs
 Priority: extra
 Architecture: amd64
 Pre-Depends: libc6-i386 (>= 2.9-18)
@@ -525,7 +515,6 @@ Description: NVIDIA OpenCL 32-bit library
  32-bit library provided by NVIDIA.
 
 Package: libgl1-nvidia-alternatives
-Section: non-free/libs
 Architecture: i386 amd64
 Pre-Depends: nvidia-common
 Depends: dpkg (>= 1.15), ${misc:Depends}
@@ -547,7 +536,6 @@ Description: simplifies replacing MESA libGL with GPU vendor libraries
  vendors.  Handles both libGL.so.1 and libGL.so.
 
 Package: libgl1-nvidia-alternatives-ia32
-Section: non-free/libs
 Priority: extra
 Architecture: amd64
 Pre-Depends: libc6-i386 (>= 2.9-18), nvidia-common
@@ -565,7 +553,6 @@ Description: simplifies replacing MESA libGL with GPU vendor libraries (32-bit)
  vendors.  Handles both libGL.so.1 and libGL.so.
 
 Package: libglx-nvidia-alternatives
-Section: non-free/libs
 Architecture: i386 amd64
 Pre-Depends: nvidia-common
 Depends: dpkg (>= 1.15), ${misc:Depends}
