old transitional packages nvidia-libvdpau1{,-ia32}, nvidia-libvdpau-dev now Conflicts/Replaces by nvidia-vdpau-driver{,-ia32} (branches/256.xx-experimental: r1835)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1836 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -233,7 +233,7 @@ Suggests:
  nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
  | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
 Replaces: nvidia-glx (<< 180.51), nvidia-libvdpau, nvidia-libvdpau1-driver,
- nvidia-libvdpau1,
+ nvidia-libvdpau1, nvidia-libvdpau-dev,
 Conflicts: nvidia-glx (<< 180.51), nvidia-libvdpau, nvidia-libvdpau1-driver,
  nvidia-libvdpau1,
 Breaks: libvdpau1 (<< 0.4)
