Provide xorg-driver-video. (branches/256.xx-experimental: r1767)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1838 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -33,7 +33,9 @@ Suggests: nvidia-settings,
  | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
 Provides:
  nvidia-glx,
+ xorg-driver-video,
  xserver-xorg-video-6,
+# for squeeze-backports add xserver-xorg-video-6
 Conflicts:
  nvidia-glx,
  nvidia-glx-legacy,
