--- a/debian/nvidia-glx.lintian-overrides.in
+++ b/debian/nvidia-glx.lintian-overrides.in
@@ -1,6 +1,8 @@
 # The NVIDIA license does not allow any form of modification.
 nvidia-glx#LEGACY#: binary-has-unneeded-section
+# keep old override for embedded-libpng until ftp-master verification process uses newer lintian
 nvidia-glx#LEGACY#: embedded-libpng
+nvidia-glx#LEGACY#: embedded-library usr/lib/xorg/modules/drivers/nvidia_drv.so: libpng
 #!i386#nvidia-glx#LEGACY#: shlib-with-executable-stack
 #!amd64#nvidia-glx#LEGACY#: shlib-with-non-pic-code
 #!amd64#nvidia-glx#LEGACY#: shlib-without-PT_GNU_STACK-section
