rewrap Depends of newly added packages
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/256.xx-experimental@1849 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -455,7 +455,8 @@ Description: NVIDIA runtime compiler library (32-bit)
 
 Package: libnvcuvid1
 Architecture: i386 amd64
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends:
+ ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA CUDA nvcuvid runtime library
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
  graphics processing units (GPUs) to be used for massively parallel
