simplify refreshing the patches in the kernel-source-tree
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/270-beta@1888 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -178,7 +178,7 @@ build-kernel-dkms-tree: build-kernel-source-tree
 kernel-source-tree: prepare build-kernel-source-tree
 	rm -rf $@
 	cp -a $(module_source) $@
-	cd $@ && QUILT_PATCHES=debian/patches quilt --quiltrc /dev/null push -a || test $$? = 2
+	cd $@ && QUILT_PATCHES=../debian/module/debian/patches quilt --quiltrc /dev/null push -a || test $$? = 2
 
 #override_dh_install:
 #	dh_install --list-missing
