* Support backport specific operations in debian/rules by setting the   BACKPORT variable in debian/rules.defs. * Set the supported Xorg ABIs in debian/rules.defs, use substvars for Xorg   related Depends/Provides, compute the values in debian/rules.   Add compatibility settings for old Xorg versions for backports only.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1901 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -27,7 +27,7 @@ Depends:
  libgl1-nvidia${nvidia:Legacy}-glx (= ${binary:Version}),
  libglx-nvidia-alternatives,
  nvidia-kernel-${nvidia:Version}${nvidia:Perfkit},
- xorg-video-abi-6.0 | xserver-xorg-core (<< 2:1.7.7),
+ ${nvidia:xorgDepends},
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
  nvidia-vdpau-driver (>= ${nvidia:Version}),
@@ -37,9 +37,7 @@ Suggests:
  | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
 Provides:
  nvidia-glx,
- xorg-driver-video,
- xserver-xorg-video-6,
-# for squeeze-backports add xserver-xorg-video-6
+ ${nvidia:xorgProvides},
 Conflicts:
  nvidia-glx,
  nvidia-glx-legacy,
