--- a/debian/rules
+++ b/debian/rules
@@ -26,6 +26,8 @@ dirname_x86_64		 = $(NVIDIA_DIRNAME_X86_64)
 
 # system libdir
 libdir			 = usr/lib$(if $(MULTIARCH),/$(DEB_HOST_MULTIARCH))
+# nvidia specific directory below $(libdir)
+nvidia_private		 = nvidia
 
 ALL_CONTROL	:= $(wildcard debian/nvidia-glx* debian/libgl1-nvidia* debian/nvidia-kernel*)
 LEGACY_CONTROL	:= $(wildcard debian/nvidia-glx$(legacy)* debian/libgl1-nvidia$(legacy)* debian/nvidia-kernel$(legacy)*)
@@ -252,6 +254,7 @@ override_dh_strip:
 	-e 's{#!amd64#}{$(if $(filter amd64,$(DEB_HOST_ARCH)),#)}g;' \
 	-e 's{#WATCH_PATTERN#}{$(subst \,\\,$(watch_pattern))}g;' \
 	-e 's{#LIBDIR#}{$(libdir)}g;' \
+	-e 's{#PRIVATE#}{$(nvidia_private)}g;' \
 	< $< > $@
 
 debian/module/debian/changelog: debian/changelog
