--- a/debian/libgl1-nvidia-glx-ia32.lintian-overrides.in
+++ b/debian/libgl1-nvidia-glx-ia32.lintian-overrides.in
@@ -1,6 +1,7 @@
 # The NVIDIA license does not allow any form of modification.
 libgl1-nvidia#LEGACY#-glx-ia32: binary-has-unneeded-section
 libgl1-nvidia#LEGACY#-glx-ia32: shared-lib-without-dependency-information
+libgl1-nvidia#LEGACY#-glx-ia32: shlib-calls-exit
 libgl1-nvidia#LEGACY#-glx-ia32: shlib-with-non-pic-code
 libgl1-nvidia#LEGACY#-glx-ia32: shlib-without-PT_GNU_STACK-section
 libgl1-nvidia#LEGACY#-glx-ia32: spelling-error-in-binary
