add misc:Pre-Depends to new package added in this branch
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/270-beta@1925 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -482,7 +482,10 @@ Description: NVIDIA CUDA nvcuvid runtime library
 
 Package: libnvidia-ml1
 Architecture: i386 amd64
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Pre-Depends:
+ ${misc:Pre-Depends}
+Depends:
+ ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA management library (NVML) runtime library
  FIXME! NVML is the library version of nvidia-smi, some management and health
  monitoring utility for the TESLA platform
