update NVML long description
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/270-beta@1932 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -487,8 +487,9 @@ Pre-Depends:
 Depends:
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA management library (NVML) runtime library
- FIXME! NVML is the library version of nvidia-smi, some management and health
- monitoring utility for the TESLA platform
+ NVML provides programmatic access to static information and monitoring
+ data for NVIDIA GPUs, as well as limited managment capabilities.
+ It is intended for use with Tesla compute products.
  .
  This package contains the nvidia-ml runtime library.
 
