--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,7 @@ Section: non-free/x11
 Architecture: i386 amd64
 Pre-Depends:
  dpkg (>= 1.15.7.2),
- nvidia-common,
+ nvidia-installer-cleanup | nvidia-common,
 Depends:
  libgl1-nvidia${nvidia:Legacy}-glx (= ${binary:Version}),
  libglx-nvidia-alternatives,
@@ -69,7 +69,7 @@ Priority: extra
 Architecture: amd64
 Pre-Depends:
  libc6-i386 (>= 2.9-18),
- nvidia-common,
+ nvidia-installer-cleanup | nvidia-common,
 Depends:
  libgl1-nvidia${nvidia:Legacy}-glx-ia32 (= ${binary:Version}),
  nvidia-kernel-${nvidia:Version}${nvidia:Perfkit},
@@ -101,7 +101,7 @@ Description: NVIDIA binary driver 32-bit libs${nvidia:LegacyDesc}
 Package: libgl1-nvidia-glx
 Architecture: i386 amd64
 Pre-Depends:
- nvidia-common,
+ nvidia-installer-cleanup | nvidia-common,
  ${misc:Pre-Depends}
 Depends:
  libgl1-nvidia-alternatives,
@@ -142,7 +142,7 @@ Priority: extra
 Architecture: amd64
 Pre-Depends:
  libc6-i386 (>= 2.9-18),
- nvidia-common,
+ nvidia-installer-cleanup | nvidia-common,
  ${misc:Pre-Depends}
 Depends:
  libgl1-nvidia-alternatives-ia32,
@@ -255,7 +255,7 @@ Description: NVIDIA binary kernel module source${nvidia:LegacyDesc}
 Package: nvidia-vdpau-driver
 Architecture: i386 amd64
 Pre-Depends:
- nvidia-common,
+ nvidia-installer-cleanup | nvidia-common,
  ${misc:Pre-Depends}
 Depends:
  libvdpau1,
@@ -303,7 +303,7 @@ Priority: extra
 Architecture: amd64
 Pre-Depends:
  libc6-i386 (>= 2.9-18),
- nvidia-common,
+ nvidia-installer-cleanup | nvidia-common,
  ${misc:Pre-Depends}
 Depends:
  lib32vdpau1,
@@ -594,7 +594,7 @@ Description: NVIDIA OpenCL 32-bit library
 Package: libgl1-nvidia-alternatives
 Architecture: i386 amd64
 Pre-Depends:
- nvidia-common,
+ nvidia-installer-cleanup | nvidia-common,
 Depends:
  dpkg (>= 1.15),
  ${misc:Depends}
@@ -620,7 +620,7 @@ Priority: extra
 Architecture: amd64
 Pre-Depends:
  libc6-i386 (>= 2.9-18),
- nvidia-common,
+ nvidia-installer-cleanup | nvidia-common,
 Depends:
  dpkg (>= 1.15),
  ${misc:Depends}
@@ -640,7 +640,7 @@ Description: simplifies replacing MESA libGL with GPU vendor libraries (32-bit)
 Package: libglx-nvidia-alternatives
 Architecture: i386 amd64
 Pre-Depends:
- nvidia-common,
+ nvidia-installer-cleanup | nvidia-common,
 Depends:
  dpkg (>= 1.15),
  ${misc:Depends}
